# src/app/api/models/FinancialPortfolio/APIGateway/Contracts/Equity/Requests/create-transfer-request.ts
@@ -2,6 +2,7 @@
 /* eslint-disable */
 import { TransferType as FinancialPortfolioApiGatewayContractsEquityEnumsTransferType } from '../../../../../FinancialPortfolio/APIGateway/Contracts/Equity/Enums/transfer-type';
 export interface CreateTransferRequest {
+  accountId?: string;
   amount?: number;
   dateTime?: null | string;
   type?: FinancialPortfolioApiGatewayContractsEquityEnumsTransferType;
