# src/app/api/models/TransferApi/transfer-response.ts
@@ -2,7 +2,9 @@
 /* eslint-disable */
 import { TransferType as TransferApiTransferType } from '../TransferApi/transfer-type';
 export interface TransferResponse {
+  accountId?: null | string;
   amount?: number;
   dateTime?: null | string;
+  id?: null | string;
   type?: TransferApiTransferType;
 }
