# src/app/api/models/TransferApi/transfer-type.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 export enum TransferType {
-  $0 = 0,
-  $1 = 1
+  Deposit = 'Deposit',
+  Withdrawal = 'Withdrawal'
 }
